fix  jumpy menu

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -122,6 +122,9 @@
 }
 
 .menuActive {
+  
+  padding-right: 8px;
+
   svg {
     filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0.12));
   }
